--- a/address_book/docker-compose.yml
+++ b/address_book/docker-compose.yml
@@ -1,16 +1,17 @@
 version: "2.1"
 
 services:
-  db:
-    image: postgres:12
-    environment:
-      POSTGRES_DB: backend
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-
   api:
     build: .
     ports:
       - 8080:8080
     environment:
       PORT: 8080
+      DBConn: postgres://postgres:postgres@db/backend?sslmode=disable
+
+  db:
+    image: postgres:12
+    environment:
+      POSTGRES_DB: backend
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
