adding docker-compose up in Makefile

--- a/address_book/Makefile
+++ b/address_book/Makefile
@@ -29,3 +29,7 @@ run-db:
 .PHONY: run-kube
 run-kube:
 	@kubectl apply -f manifest.yaml
+
+.PHONY: docker-compose-up
+docker-compose-up:
+	@docker-compose up
