--- a/atlas/responder/Makefile
+++ b/atlas/responder/Makefile
@@ -22,3 +22,13 @@ gen-proto: docker-build-generator
 		--grpc-gateway_out=. --grpc-gateway_opt=logtostderr=true --grpc-gateway_opt=paths=source_relative --grpc-gateway_opt=generate_unbound_methods=true \
 		-I /usr/local/include/. \
     	-I /api/. api.proto
+
+.PHONY: run-responder
+run-responder:
+	@export DAPR_PUBSUB_NAME=messages && dapr run --app-id responder \
+           --app-protocol http \
+           --app-port 8088 \
+           --dapr-http-port 3501 \
+           --log-level debug \
+           --components-path ./config \
+           go run cmd/server/*.go
