adding set and get mode

--- a/atlas/storage/Makefile
+++ b/atlas/storage/Makefile
@@ -11,6 +11,7 @@
 run-db:
 	@docker run \
 		-d \
+		-v `pwd`/db/migrations:/docker-entrypoint-initdb.d/ \
 		--rm \
 		-p 5432:5432 \
 		--name db \
