--- a/atlas/portal/Makefile
+++ b/atlas/portal/Makefile
@@ -21,4 +21,4 @@ gen-proto: docker-build-generator
     	--go-grpc_out=. --go-grpc_opt=paths=source_relative \
 		--grpc-gateway_out=. --grpc-gateway_opt=logtostderr=true --grpc-gateway_opt=paths=source_relative --grpc-gateway_opt=generate_unbound_methods=true \
 		-I /usr/local/include/. \
-    	-I /api/. api.proto
+    	-I /api/. portal.api.proto
